--- a/index.html
+++ b/index.html
@@ -52,5 +52,6 @@
 
     </div>
     <script src="./js/script.js"></script>
+    <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
 </body>
 </html>
